--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 	"repository":{
 		"type": "git",
 		"url": "https://github.com/jarynseidl/censorify"
-	}
-	"keywords":{
+	},
+	"keywords":[
 		"censor",
 		"words"
-	}
+	],
 	"dependencies": {},
 	"engines": {
 		"node": "*"
